[tool.poetry]
name = "tokenizer-comparison"
version = "0.1.0"
description = ""
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
SudachiPy = "^0.5.2"
SudachiDict-core = "^20201223.post1"
mecab = "^0.996.3"
mecab-python3 = "^1.0.3"
unidic-lite = "^1.0.8"
Janome = "^0.4.1"
seaborn = "^0.11.1"
ipykernel = "^5.5.5"
requests = "^2.25.1"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
